--- a/angular/src/app/app.component.css
+++ b/angular/src/app/app.component.css
@@ -38,6 +38,11 @@
     margin: 0 16px;
 }
 
+.auth-link {
+    color: white;
+    margin: 0px 16px;
+}
+
 .toolbar #twitter-logo:hover,
 .toolbar #youtube-logo:hover {
     opacity: 0.8;
