--- a/angular/src/app/test-canvas/test-canvas.component.html
+++ b/angular/src/app/test-canvas/test-canvas.component.html
@@ -1,3 +1,5 @@
-<div class="content">
-    <layout-canvas #layoutCanvas></layout-canvas>
+<div class="backing">
+    <div class="content">
+        <layout-canvas #layoutCanvas></layout-canvas>
+    </div>
 </div>
