--- a/angular/src/app/admin/view-current-user/view-current-user.component.css
+++ b/angular/src/app/admin/view-current-user/view-current-user.component.css
@@ -13,5 +13,52 @@
 }
 
 .attValue {
+    vertical-align: middle;
     font-size: x-large;
+}
+
+.editButton {
+    margin-left: 8px;
+}
+.saveButton {
+    margin-left: 8px;
+}
+.cancelButton {
+    margin-left: 8px;
+}
+
+
+.p-inputtext {
+    display: block;
+    margin-bottom: .5rem;
+}
+
+.p-field * {
+    display: block;
+}
+
+:host ::ng-deep .custom-spinner .p-progress-spinner-circle {
+    animation: custom-progress-spinner-dash 1.5s ease-in-out infinite, custom-progress-spinner-color 6s ease-in-out infinite;
+}
+
+@keyframes custom-progress-spinner-color {
+    100%,
+    0% {
+        stroke: #82C0CC;
+    }
+}
+
+@keyframes custom-progress-spinner-dash {
+    0% {
+        stroke-dasharray: 1, 200;
+        stroke-dashoffset: 0;
+    }
+    50% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -35px;
+    }
+    100% {
+        stroke-dasharray: 89, 200;
+        stroke-dashoffset: -124px;
+    }
 }
