Angular: Added initial edit layout page

--- a/angular/src/app/app.component.html
+++ b/angular/src/app/app.component.html
@@ -1,5 +1,5 @@
-<div>
-  <p-menubar>
+<div class="page">
+  <p-menubar class="tabMenu">
     <ng-template pTemplate="start">
       <div class="menutitle">Natural Fa&#231;ade</div>
     </ng-template>
@@ -11,7 +11,7 @@
     </ng-template>
   </p-menubar>
   
-  <div class="mt-2">
+  <div class="mt-2" class="content">
     <router-outlet></router-outlet>
   </div>
 </div>
