--- a/angular/src/app/app.component.css
+++ b/angular/src/app/app.component.css
@@ -7,3 +7,17 @@
     font-size: 20px;
     font-weight: bold;
 }
+
+.page {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+.tabMenu {
+    flex: auto 0 0;
+}
+
+.content {
+    flex: auto 1 1;
+}
