--- a/angular/src/app/main/layouts/edit-layout/edit-layout.component.html
+++ b/angular/src/app/main/layouts/edit-layout/edit-layout.component.html
@@ -11,19 +11,19 @@
             <div class="flexSpacer"></div>
             <div class="panel updatePanel flex flex-row">
                 <div class="flex-1"></div>
-                <button pButton pRipple type="button" label="Update" icon="pi pi-angle-double-up" class="marginedButton" [disabled]="previewLayoutJson == editedLayoutJson || isFetching" (click)="onPreviewLayout()"></button>
+                <button pButton pRipple type="button" label="Update" icon="pi pi-angle-double-up" class="marginedButton" [disabled]="previewLayoutJson == editedLayoutJson || isBusy" (click)="onPreviewLayout()"></button>
                 <div class="flex-1"></div>
             </div>
             <div class="flexSpacer"></div>
             <div class="panel inputPanel">
-                <textarea pInputTextarea [autoResize]="true" class="inputTextArea" [disabled]="isFetching" [(ngModel)]="editedLayoutJson"></textarea>
+                <textarea pInputTextarea [autoResize]="true" class="inputTextArea" [disabled]="isBusy" [(ngModel)]="editedLayoutJson"></textarea>
             </div>
             <div class="flexSpacer"></div>
             <div class="panel submitPanel flex flex-row">
                 <div class="flex-1"></div>
-                <button pButton pRipple type="button" label="Save" class="marginedButton" [disabled]="isFetching"></button>
+                <button pButton pRipple type="button" label="Save" class="marginedButton" [disabled]="previewLayoutJson != editedLayoutJson || editedLayoutJson === null || isBusy || layoutId === null" (click)="onSaveLayout()"></button>
                 <div class="flexSpacer"></div>
-                <button pButton pRipple type="button" label="Cancel" class="p-button-secondary marginedButton" [disabled]="isFetching" routerLink="/main/layouts"></button>
+                <button pButton pRipple type="button" label="Cancel" class="p-button-secondary marginedButton" [disabled]="isBusy" routerLink="/main/layouts"></button>
                 <div class="flexSpacer"></div>
             </div>
         </div>
