--- a/angular/src/app/main/layouts/layouts.component.html
+++ b/angular/src/app/main/layouts/layouts.component.html
@@ -18,7 +18,7 @@
                 </div>
                 <div class="layout-list-spacer"></div>
                 <div class="layout-list-actions">
-                    <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded action-button" routerLink="/main/layouts/edit"></button>
+                    <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded action-button" routerLink="/main/layouts/edit" [queryParams]="{layoutId: item.LayoutId}"></button>
                     <!--<button pButton pRipple type="button" icon="pi pi-trash" class="p-button-rounded p-button-danger action-button"></button>-->
                 </div>
             </div>
@@ -32,7 +32,7 @@
                     <div class="layout-datetime">{{item.CreatedDate}}</div>
                     <div class="layout-datetime">{{item.CreatedTime}}</div>
                     <div class="layout-grid-actions">
-                        <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded action-button" routerLink="/main/layouts/edit"></button>
+                        <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded action-button" routerLink="/main/layouts/edit" [queryParams]="{layoutId: item.LayoutId}"></button>
                         <!--<button pButton pRipple type="button" icon="pi pi-trash" class="p-button-rounded p-button-danger action-button"></button>-->
                     </div>
                 </div>
