--- a/angular/src/app/main/layouts/layouts.component.html
+++ b/angular/src/app/main/layouts/layouts.component.html
@@ -6,37 +6,9 @@
         </div>
     </ng-template>
     <ng-template let-item pTemplate="listItem">
-        <div class="col-12">
-            <div class="layout-list-item">
-                <div class="layout-list-title">
-                    <div class="layout-name">{{item.Name}}</div>
-                </div>
-                <div class="layout-list-spacer"></div>
-                <div class="layout-list-datetime">
-                    <div class="layout-datetime">{{item.CreatedDate}}</div>
-                    <div class="layout-datetime">{{item.CreatedTime}}</div>
-                </div>
-                <div class="layout-list-spacer"></div>
-                <div class="layout-list-actions">
-                    <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded action-button" routerLink="/main/layouts/edit" [queryParams]="{layoutId: item.LayoutId}"></button>
-                    <button pButton pRipple type="button" icon="pi pi-search" class="p-button-rounded p-button-secondary action-button" (click)="onViewOverlay(item.LayoutId)"></button>
-                </div>
-            </div>
-        </div>
+        <app-layout-list-item [item]="item" class="col-12"></app-layout-list-item>
     </ng-template>
     <ng-template let-item pTemplate="gridItem">
-        <div class="col-12 md:col-4 xl:col-2">
-            <div class="layout-grid-item card">
-                <div class="layout-grid-item-content">
-                    <div class="layout-name">{{item.Name}}</div>
-                    <div class="layout-datetime">{{item.CreatedDate}}</div>
-                    <div class="layout-datetime">{{item.CreatedTime}}</div>
-                    <div class="layout-grid-actions">
-                        <button pButton pRipple type="button" icon="pi pi-pencil" class="p-button-rounded action-button" routerLink="/main/layouts/edit" [queryParams]="{layoutId: item.LayoutId}"></button>
-                        <button pButton pRipple type="button" icon="pi pi-search" class="p-button-rounded p-button-secondary action-button" (click)="onViewOverlay(item.LayoutId)"></button>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <app-layout-grid-item [item]="item" class="col-12 md:col-4 xl:col-2"></app-layout-grid-item>
     </ng-template>
 </p-dataView>
