Angular: Implemented transparent background for overlay view

--- a/angular/src/app/main/layouts/create-layout/create-layout.component.html
+++ b/angular/src/app/main/layouts/create-layout/create-layout.component.html
@@ -14,7 +14,7 @@
                 <div>
                     <span>
                         <button pButton pRipple type="button" label="Save" (click)="onSaveLayout()"></button>
-                        <button pButton pRipple type="button" label="Cancel" class="p-button-secondary nextButton" routerLink="/main/layouts"></button>
+                        <button pButton pRipple type="button" label="Cancel" class="p-button-secondary nextButton" routerLink="/layouts"></button>
                     </span>
                 </div>
                 <div>
