--- a/angular/src/app/main/layouts/edit-controls/edit-controls.component.html
+++ b/angular/src/app/main/layouts/edit-controls/edit-controls.component.html
@@ -9,7 +9,7 @@
             <div class="submitGroup">
                 <div>
                     <span>
-                        <button pButton pRipple type="button" label="Back" class="p-button-secondary" routerLink="/main/layouts"></button>
+                        <button pButton pRipple type="button" label="Back" class="p-button-secondary" routerLink="/layouts"></button>
                     </span>
                 </div>
             </div>
