--- a/angular/src/app/main/layouts/edit-layout/edit-layout.component.html
+++ b/angular/src/app/main/layouts/edit-layout/edit-layout.component.html
@@ -23,7 +23,7 @@
                 <div class="flex-1"></div>
                 <button pButton pRipple type="button" label="Save" class="marginedButton" [disabled]="previewLayoutJson != editedLayoutJson || editedLayoutJson === null || isBusy || layoutId === null" (click)="onSaveLayout()"></button>
                 <div class="flexSpacer"></div>
-                <button pButton pRipple type="button" label="Cancel" class="p-button-secondary marginedButton" [disabled]="isBusy" routerLink="/main/layouts"></button>
+                <button pButton pRipple type="button" label="Cancel" class="p-button-secondary marginedButton" [disabled]="isBusy" routerLink="/layouts"></button>
                 <div class="flexSpacer"></div>
             </div>
         </div>
