--- a/angular/src/app/main/layouts/layouts.component.html
+++ b/angular/src/app/main/layouts/layouts.component.html
@@ -2,7 +2,7 @@
     <ng-template pTemplate="header">
         <div class="flex flex-column md:flex-row md:justify-content-between">
             <p-dataViewLayoutOptions></p-dataViewLayoutOptions>
-            <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded" routerLink="/main/layouts/create"></button>
+            <button pButton pRipple type="button" icon="pi pi-plus" class="p-button-rounded" routerLink="/layouts/create"></button>
         </div>
     </ng-template>
     <ng-template let-item pTemplate="listItem">
