--- a/angular/src/app/main/layouts/edit-layout/edit-layout.component.css
+++ b/angular/src/app/main/layouts/edit-layout/edit-layout.component.css
@@ -43,3 +43,11 @@
 .marginedButton {
     margin: 0.5em 0em;
 }
+
+.marginedDropDownButton {
+    margin: 0.5em 0em 0.5em 1.0em;
+}
+
+.marginedMiddleButton {
+    margin: 0.5em auto;
+}
