Angular: Added video element, but it can't be started yet

--- a/angular/src/app/layout/view-overlay/view-overlay.component.css
+++ b/angular/src/app/layout/view-overlay/view-overlay.component.css
@@ -6,3 +6,17 @@
     left: 0;
     top: 0;
 }
+
+#overlayCanvas
+{
+    position: fixed;
+    left: 0;
+    top: 0;
+}
+
+.overlayVideo
+{
+    position: fixed;
+    left: 0;
+    top: 0;
+}
