--- a/angular/src/app/main/layouts/edit-controls/edit-controls-field/edit-controls-field.component.css
+++ b/angular/src/app/main/layouts/edit-controls/edit-controls-field/edit-controls-field.component.css
@@ -23,7 +23,7 @@
     margin-left: 1em;
 }
 
-.audioWalkmanButton {
+.audioWalkmanButton, .videoWalkmanButton {
     flex: 0 0 auto;
     margin-right: 1em;
 }
